@@ -5,6 +5,9 @@ CVS code
 - nano.c:
   main()
 	- Changed tabsize long arg to actually accept an argument *sigh*.
+- po/Makefile.in.in:
+	- Patch to handle $DESTDIR (orig by Dan Harnett contributed by
+	  Christian Weisgerber)
 
 nano-0.9.15 - 08/03/2000
 - Changed edit_update call to take arguments TOP, CENTER or BOTTOM.
